--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang = "en">
     <header></header>
     <body>
-        <input style="box-decoration-break: clone" type = "file" accept = "image/png, image/jpeg">
-
-        <button>Submit</button>
-        <script src = "loader.js" charset = "utf-8"></script>
+		<form action="test.php" method="POST">
+			<input style = "box-decoration-break: clone" type = "file" accept="image/png, image/jpeg">
+			<button type="submit">Submit</button>
+		</form>
+        <script src="loader.js" charset="utf-8"></script>
     </body>
-
 </html>
