--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
     <header></header>
     <body>
+		<!-- a form that will hold the <input> values -->
+		<!-- action is the php file that will process the form data, or file in this case -->
+		<!-- the submit button will submit the <form> as a whole -->
 		<form action="test.php" method="POST">
 			<input style = "box-decoration-break: clone" type = "file" accept="image/png, image/jpeg">
 			<button type="submit">Submit</button>
